crates/apollo_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_330.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 74
- 1
- 14
- 0
- 0
- 2
- 2
- 130
- 84
- 96
- 0
- 1
- 250
- 255
- 0
- 0
- 0

